# marcosleal-prd

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  FOOTER.md  README.md  docker-compose.yaml  main.py  pyproject.toml  setup.cfg
.github/workflows/: codestyle.yml  cronjob.yml
marcosleal/: settings.py  utils.py
marcosleal/services/: footer.py  medium.py  site.py  youtube.py
scripts/: start-lint.sh
src/: main.py
