[tool.poetry]
name = "marcosleal"
version = "0.1.0"
description = "Geração automática de Profile README.md com Python e Github Actions."
authors = ["Marcos V. Leal <marcosleal@coderarena.com.br>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/marcosleal-prd/marcosleal-prd"

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.dependencies]
python = "^3.9"
feedparser = "^6.0.2"
pytz = "^2020.4"
google-api-python-client = "^1.12.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
pycodestyle = "^2.6.0"
flake8 = "^3.8.4"
mypy = "^0.790"

[tool.isort]
force_single_line = false
line_length = 80
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
lines_between_types = 1
known_marcosleal = "marcosleal"
known_third_party = ["feedparser", "pytz", "googleapiclient"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "MARCOSLEAL"]

[tool.black]
line-length = 80
target_version = ["py38"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
